--- a/package.json
+++ b/package.json
@@ -34,7 +34,7 @@
     "start": "npm run develop",
     "serve": "gatsby serve",
     "test": "echo \"Write tests! -> https://gatsby.dev/unit-testing\"",
-    "deploy": "gatsby build --prefix-paths && mv ./public ./docs"
+    "deploy": "gatsby build --prefix-paths && cp -rf ./public ./docs"
   },
   "repository": {
     "type": "git",
