--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "private": true,
   "description": "A simple starter to get up and developing quickly with Gatsby",
   "version": "0.1.0",
-  "author": "Kyle Mathews <mathews.kyle@gmail.com>",
+  "author": "@RMSD (Rajat Murthi)",
   "dependencies": {
     "gatsby": "^2.4.6",
     "gatsby-image": "^2.0.41",
