--- a/.travis.yml
+++ b/.travis.yml
@@ -2,6 +2,10 @@ language: node_js
 node_js:
   - "10"
 
+env:
+  global:
+    - GH_REF: github.com/RMSD/EdgeSheet.git
+
 branches:
   only:
     - master
@@ -9,6 +13,14 @@ branches:
 
 script:
   - npm test
+
+before_deploy:
+  - git config user.name "Travis-CI"
+  - git config user.email "travis@CI.com"
+  - npm run deploy
+  - git add -A
+  - git push --force --quiet "https://${$GITHUB_TOKEN }@${GH_REF}" origin > /dev/null 2>&1
+
 
 deploy:
   provider: pages
