Fix bad copying.

--- a/.travis.yml
+++ b/.travis.yml
@@ -14,7 +14,7 @@ before_deploy:
   - git config user.email "travis@CI.com"
   - npm run deploy
   - git add -A
-  - git push --force --quiet "https://${$GITHUB_TOKEN}@github.com/RMSD/EdgeSheet.git" > /dev/null 2>&1
+  - git push --force --quiet "https://${GITHUB_TOKEN}@github.com/RMSD/EdgeSheet.git" > /dev/null 2>&1
 
 deploy:
   provider: pages
