--- a/.travis.yml
+++ b/.travis.yml
@@ -11,6 +11,7 @@ script:
 
 deploy:
   - provider: script
+    skip_cleanup: true
     script: bash build-scripts/deploy.sh $GITHUB_TOKEN
     on:
       branch: master
