--- a/.github/workflows/deployment.yml
+++ b/.github/workflows/deployment.yml
@@ -24,6 +24,6 @@ jobs:
       uses: stefanzweifel/git-auto-commit-action@v2.1.0
       with:
         commit_message: Apply automatic changes
-        branch: ${{ github.head_ref }}
+        branch: master
       env:
         GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
