--- a/package.json
+++ b/package.json
@@ -2,25 +2,27 @@
   "name": "gatsby-starter-default",
   "private": true,
   "description": "A simple starter to get up and developing quickly with Gatsby",
-  "version": "0.1.0",
+  "version": "0.2.0",
   "author": "@RMSD (Rajat Murthi)",
   "dependencies": {
-    "gatsby": "^2.4.6",
-    "gatsby-image": "^2.0.41",
-    "gatsby-plugin-manifest": "^2.1.1",
-    "gatsby-plugin-offline": "^2.1.0",
-    "gatsby-plugin-react-helmet": "^3.0.12",
-    "gatsby-plugin-sharp": "^2.0.37",
-    "gatsby-source-filesystem": "^2.0.43",
-    "gatsby-transformer-json": "^2.1.11",
-    "gatsby-transformer-sharp": "^2.1.19",
+    "bulma": "^0.7.5",
+    "eslint-plugin-flowtype": "^4.3.0",
+    "gatsby": "^2.15.28",
+    "gatsby-image": "^2.2.23",
+    "gatsby-plugin-manifest": "^2.2.20",
+    "gatsby-plugin-offline": "^2.2.10",
+    "gatsby-plugin-react-helmet": "^3.1.10",
+    "gatsby-plugin-sharp": "^2.2.27",
+    "gatsby-source-filesystem": "^2.1.28",
+    "gatsby-transformer-json": "^2.2.11",
+    "gatsby-transformer-sharp": "^2.2.19",
     "prop-types": "^15.7.2",
-    "react": "^16.8.6",
-    "react-dom": "^16.8.6",
+    "react": "^16.10.1",
+    "react-dom": "^16.10.1",
     "react-helmet": "^5.2.1"
   },
   "devDependencies": {
-    "gh-pages": "^2.0.1",
+    "gh-pages": "^2.1.1",
     "prettier": "^1.17.1"
   },
   "keywords": [
@@ -38,9 +40,9 @@
   },
   "repository": {
     "type": "git",
-    "url": "https://github.com/gatsbyjs/gatsby-starter-default"
+    "url": "https://github.com/RMSD/EdgeSheet"
   },
   "bugs": {
-    "url": "https://github.com/gatsbyjs/gatsby/issues"
+    "url": "https://github.com/RMSD/EdgeSheet/issues"
   }
 }
