--- a/.github/workflows/deployment.yml
+++ b/.github/workflows/deployment.yml
@@ -8,6 +8,7 @@ on:
     - '*'    
     - '!/docs/*'
     - '!/.github/*'
+    - '!README.md'
 
 jobs:
   deploy:
@@ -31,6 +32,7 @@ jobs:
         COMMIT_MESSAGE: Run deploy.
         PULL_REQUEST_BODY: Prepare next deployment.
         PULL_REQUEST_TITLE: Website-Deployment
+        PULL_REQUEST_LABELS: deployment
         PULL_REQUEST_REVIEWERS: RMSD
         PULL_REQUEST_BRANCH: next-deployment
         BRANCH_SUFFIX: none
