--- a/package.json
+++ b/package.json
@@ -3,9 +3,8 @@
   "version": "0.1.0",
   "private": true,
   "scripts": {
-    "dev": "next dev",
-    "build": "next build",
-    "start": "next start"
+    "build": "next build && next export -o docs",
+    "dev": "next dev"
   },
   "dependencies": {
     "next": "10.0.3",
