--- a/package.json
+++ b/package.json
@@ -7,7 +7,9 @@
     "dev": "next dev"
   },
   "dependencies": {
-    "next": "10.0.3",
+    "bulma": "^0.9.1",
+    "next": "^10.0.3",
+    "node-sass": "^5.0.0",
     "react": "17.0.1",
     "react-dom": "17.0.1"
   },
